plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.inglo'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

bootJar {
    archiveFileName.set "application.jar"
}

jar {
    enabled = false
}

dependencies {
    // Spring Boot Default
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Spring Boot Mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // Spring Boot Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    // Spring Boot Data
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    // MYSQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    // Sentry
    implementation 'io.sentry:sentry-spring-boot-starter-jakarta:7.9.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // KAFKA
    implementation 'org.springframework.kafka:spring-kafka'

    // AWS
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    implementation 'org.springframework.cloud:spring-cloud-aws-context:2.2.6.RELEASE'
    implementation 'org.springframework.cloud:spring-cloud-aws-autoconfigure:2.2.6.RELEASE'

    // Documents
    implementation 'org.docx4j:docx4j-core:11.5.0'
    implementation 'org.docx4j:docx4j-JAXB-ReferenceImpl:11.5.0'
    implementation 'kr.dogfoot:hwplib:1.1.7'
    implementation 'com.itextpdf:itextpdf:5.5.13.4'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
    implementation 'org.glassfish.jaxb:jaxb-core:4.0.5'
    implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.5'

    // Firebase
    implementation 'com.google.firebase:firebase-admin:6.8.1'
    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'

    // Testing Dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

def generatedFiles = layout.buildDirectory.dir('generated/querydsl').get().asFile

tasks.withType(JavaCompile).configureEach {
    options.getGeneratedSourceOutputDirectory().set(file(generatedFiles))
}

sourceSets {
    main.java.srcDirs += [ generatedFiles ]
}

clean {
    delete file(generatedFiles)
}

tasks.named('test') {
    useJUnitPlatform()
}
